🚚 Rename Dataset to Collection

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register an initial dataset"
+    "## Register an initial collection"
    ]
   },
   {
@@ -95,8 +95,8 @@
     "    )\n",
     "    ln.track(transform)\n",
     "\n",
-    "    # an example dataset that has a few cell type, tissue and disease annotations\n",
-    "    adata = ln.dev.datasets.anndata_with_obs()\n",
+    "    # an example collection that has a few cell type, tissue and disease annotations\n",
+    "    adata = ln.dev.collections.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
     "    genes = lb.Gene.from_values(adata.var_names, lb.Gene.ensembl_gene_id)\n",
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pull the registered dataset, apply a transformation, and register the result"
+    "## Pull the registered collection, apply a transformation, and register the result"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subset dataset to specific cell types and diseases"
+    "### Subset collection to specific cell types and diseases"
    ]
   },
   {
