--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -100,7 +100,7 @@
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
     "# get the count matrix\n",
-    "path = ln.dev.datasets.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts(\n",
+    "path = ln.dev.collections.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts(\n",
     "    populate_registries=True\n",
     ")\n",
     "# move it into the output directory\n",
