--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
     "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to annotate datasets analyzed with CellTypist enrichment analysis and track the dataset with LaminDB."
+    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to annotate collections analyzed with CellTypist enrichment analysis and track the collection with LaminDB."
    ]
   },
   {
