--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of flow cytometry data shards as a single queryable dataset."
+    "You'll learn how to manage a growing number of flow cytometry data shards as a single queryable collection."
    ]
   },
   {
@@ -31,10 +31,10 @@
    "source": [
     "Specifically, you will\n",
     "\n",
-    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
-    "2. append a new data shard (a new `.fcs` file) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
+    "1. read a single `.fcs` file as an `AnnData` and seed a versioned collection with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
+    "2. append a new data shard (a new `.fcs` file) to create a new version of the collection ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
     "3. query individual files and cell markers ([![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)](facs3))\n",
-    "4. analyze the dataset and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs4))\n",
+    "4. analyze the collection and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs4))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -121,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.dev.datasets.file_fcs_alpert19(populate_registries=True)"
+    "ln.dev.collections.file_fcs_alpert19(populate_registries=True)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normalize the dataset:"
+    "Normalize the collection:"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "source": [
     "```{note}\n",
     "\n",
-    "If the dataset was a flow dataset, you'll also have to compensate the data, if possible. The metadata should contain a compensation matrix, which could then be run by the pytometry compensation function. In the case here, its a cyTOF dataset, which doesn't (really) require compensation. \n",
+    "If the collection was a flow collection, you'll also have to compensate the data, if possible. The metadata should contain a compensation matrix, which could then be run by the pytometry compensation function. In the case here, its a cyTOF collection, which doesn't (really) require compensation. \n",
     "\n",
     "```"
    ]
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a dataset from the artifact"
+    "## Create a collection from the artifact"
    ]
   },
   {
@@ -569,16 +569,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(artifact, name=\"My versioned cytometry dataset\", version=\"1\")\n",
+    "collection = ln.Collection(\n",
+    "    artifact, name=\"My versioned cytometry collection\", version=\"1\"\n",
+    ")\n",
     "\n",
-    "dataset"
+    "collection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's inspect the features measured in this dataset which were inherited from the artifact:"
+    "Let's inspect the features measured in this collection which were inherited from the artifact:"
    ]
   },
   {
@@ -587,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.features"
+    "collection.features"
    ]
   },
   {
@@ -603,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.save()"
+    "collection.save()"
    ]
   },
   {
@@ -619,8 +621,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.labels.add(experimental_factors.cytof, features.assay)\n",
-    "dataset.labels.add(organism.human, features.organism)"
+    "collection.labels.add(experimental_factors.cytof, features.assay)\n",
+    "collection.labels.add(organism.human, features.organism)"
    ]
   },
   {
@@ -629,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.view_flow()"
+    "collection.view_flow()"
    ]
   }
  ],
