--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = readfcs.datasets.Oetjen18_t1()\n",
+    "filepath = readfcs.collections.Oetjen18_t1()\n",
     "\n",
     "adata = readfcs.read(filepath)"
    ]
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect a PCA fo QC - this dataset looks much like noise:"
+    "Inspect a PCA fo QC - this collection looks much like noise:"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a new version of the dataset by appending a artifact"
+    "## Create a new version of the collection by appending a artifact"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v1 = ln.Dataset.filter(name=\"My versioned cytometry dataset\").one()"
+    "collection_v1 = ln.Collection.filter(name=\"My versioned cytometry collection\").one()"
    ]
   },
   {
@@ -390,8 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2 = ln.Dataset(\n",
-    "    [artifact, dataset_v1.artifact], is_new_version_of=dataset_v1, version=\"2\"\n",
+    "collection_v2 = ln.Collection(\n",
+    "    [artifact, collection_v1.artifact], is_new_version_of=collection_v1, version=\"2\"\n",
     ")"
    ]
   },
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2"
+    "collection_v2"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.features"
+    "collection_v2.features"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2"
+    "collection_v2"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.save()"
+    "collection_v2.save()"
    ]
   },
   {
@@ -437,8 +437,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "dataset_v2.labels.add(organism.human, features.organism)"
+    "collection_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "collection_v2.labels.add(organism.human, features.organism)"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.view_flow()"
+    "collection_v2.view_flow()"
    ]
   }
  ],
