--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query panels and datasets based on markers, e.g., which datasets have `'CD8'` in the flow panel:"
+    "Query panels and collections based on markers, e.g., which collections have `'CD8'` in the flow panel:"
    ]
   },
   {
