--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the dataset and save a result"
+    "# Analyze the collection and save a result"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Dataset.filter().df()"
+    "ln.Collection.filter().df()"
    ]
   },
   {
@@ -43,7 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned cytometry dataset\", version=\"2\").one()"
+    "collection = ln.Collection.filter(\n",
+    "    name=\"My versioned cytometry collection\", version=\"2\"\n",
+    ").one()"
    ]
   },
   {
@@ -52,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = dataset.load(join=\"inner\")"
+    "adata = collection.load(join=\"inner\")"
    ]
   },
   {
