--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -83,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
+    "Here, we have a spatial gene expression collection measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
     "\n",
-    "This dataset contains two parts:\n",
+    "This collection contains two parts:\n",
     "\n",
     "1. a high-res image of a slice of fetal liver\n",
-    "2. a single cell expression dataset in .h5ad"
+    "2. a single cell expression collection in .h5ad"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = ln.dev.datasets.file_tiff_suo22()\n",
+    "img_path = ln.dev.collections.file_tiff_suo22()\n",
     "img = plt.imread(img_path)\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_suo22_Visium10X()\n",
+    "adata = ln.dev.collections.anndata_suo22_Visium10X()\n",
     "# subset to the same image\n",
     "adata = adata[adata.obs[\"img_id\"] == \"F121_LP1_4LIV\"].copy()\n",
     "adata"
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll register the single-cell data and the image as a Dataset."
+    "We'll register the single-cell data and the image as a Collection."
    ]
   },
   {
@@ -177,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset([file_ad, file_img], name=\"Suo22\")\n",
-    "dataset.save()"
+    "collection = ln.Collection([file_ad, file_img], name=\"Suo22\")\n",
+    "collection.save()"
    ]
   },
   {
