--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -96,7 +96,7 @@
     "    ln.track(transform)\n",
     "\n",
     "    # an example collection that has a few cell type, tissue and disease annotations\n",
-    "    adata = ln.dev.collections.anndata_with_obs()\n",
+    "    adata = ln.dev.datasets.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
     "    genes = lb.Gene.from_values(adata.var_names, lb.Gene.ensembl_gene_id)\n",
