--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -15,7 +15,7 @@
     "- [Manage biological registries](docs:bio-registries)\n",
     "- [Annotate data](docs:annotate)\n",
     "- [Validate & standardize](docs:validate)\n",
-    "- [Validate & register scRNA-seq collections](docs:scrna)"
+    "- [Validate & register scRNA-seq datasets](docs:scrna)"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "from lamin_usecases import collections as ds\n",
+    "from lamin_usecases import datasets as ds\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
     "import celltypist\n",
@@ -65,21 +65,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An interferon-beta treated collection"
+    "## An interferon-beta treated dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A small peripheral blood mononuclear cell collection that is split into control and stimulated groups. The stimulated group was treated with interferon beta."
+    "A small peripheral blood mononuclear cell dataset that is split into control and stimulated groups. The stimulated group was treated with interferon beta."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the collection and perform some preprocessing:"
+    "Let's load the dataset and perform some preprocessing:"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register analyzed collection and annotate with metadata"
+    "## Register analyzed dataset and annotate with metadata"
    ]
   },
   {
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register collection using a Artifact object:"
+    "Register dataset using a Artifact object:"
    ]
   },
   {
