--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -121,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.dev.collections.file_fcs_alpert19(populate_registries=True)"
+    "ln.dev.datasets.file_fcs_alpert19(populate_registries=True)"
    ]
   },
   {
