--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "mdata = ln.dev.collections.mudata_papalexi21_subset()\n",
+    "mdata = ln.dev.datasets.mudata_papalexi21_subset()\n",
     "mdata"
    ]
   },
