--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -136,7 +136,7 @@
     "    ln.setup.login(\"testuser1\")\n",
     "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
     "    ln.track(transform)\n",
-    "    output_path = ln.dev.collections.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
+    "    output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
     "    output_file = ln.Artifact(\n",
     "        output_path, description=\"Raw data of schmidt22 crispra GWS\"\n",
     "    )\n",
@@ -239,7 +239,7 @@
     "    # create a pipeline transform\n",
     "    ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
     "    # register output files of the sequencer\n",
-    "    upload_dir = ln.dev.collections.dir_scrnaseq_cellranger(\n",
+    "    upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
     "        \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
     "    )\n",
     "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
@@ -294,7 +294,7 @@
     "    )\n",
     "    ln.track(transform)\n",
     "    input_artifacts = [f.stage() for f in output_artifacts]\n",
-    "    output_path = ln.dev.collections.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
+    "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
     "    output_file.save()\n",
     "\n",
