--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,11 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different collections are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
+    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
     "\n",
     "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the steps of registering pathways and link them to genes.\n",
     "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the collection with LaminDB."
+    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
    ]
   },
   {
