--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register an initial collection"
+    "## Register an initial dataset"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "    )\n",
     "    ln.track(transform)\n",
     "\n",
-    "    # an example collection that has a few cell type, tissue and disease annotations\n",
+    "    # an example dataset that has a few cell type, tissue and disease annotations\n",
     "    adata = ln.dev.datasets.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pull the registered collection, apply a transformation, and register the result"
+    "## Pull the registered dataset, apply a transformation, and register the result"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subset collection to specific cell types and diseases"
+    "### Subset dataset to specific cell types and diseases"
    ]
   },
   {
