--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -83,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we have a spatial gene expression collection measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
+    "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
     "\n",
     "This collection contains two parts:\n",
     "\n",
     "1. a high-res image of a slice of fetal liver\n",
-    "2. a single cell expression collection in .h5ad"
+    "2. a single cell expression dataset in .h5ad"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll register the single-cell data and the image as a Collection."
+    "We'll register the single-cell data and the image as a `Collection`."
    ]
   },
   {
