--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
     "\n",
-    "This dataset contains two parts:\n",
+    "This collection contains two parts:\n",
     "\n",
     "1. a high-res image of a slice of fetal liver\n",
     "2. a single cell expression dataset in .h5ad"
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll register the single-cell data and the image as a Dataset."
+    "We'll register the single-cell data and the image as a `Collection`."
    ]
   },
   {
@@ -177,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset([file_ad, file_img], name=\"Suo22\")\n",
-    "dataset.save()"
+    "collection = ln.Collection([file_ad, file_img], name=\"Suo22\")\n",
+    "collection.save()"
    ]
   },
   {
