--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experimental Factor"
+    "# Experimental factor"
    ]
   },
   {
