--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = readfcs.collections.Oetjen18_t1()\n",
+    "filepath = readfcs.datasets.Oetjen18_t1()\n",
     "\n",
     "adata = readfcs.read(filepath)"
    ]
