🚚 Replace view_flow with view_lineage

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -357,7 +357,7 @@
    "outputs": [],
    "source": [
     "print(\"--> What is the history of this artifact?\\n\")\n",
-    "file_subset.view_flow()\n",
+    "file_subset.view_lineage()\n",
     "\n",
     "print(\"\\n\\n--> Which features and labels are associated with it?\\n\")\n",
     "logger.print(file_subset.features)\n",
