--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file.view_flow()"
+    "curated_file.view_lineage()"
    ]
   },
   {
