--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -553,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.view_flow()"
+    "collection.view_lineage()"
    ]
   }
  ],
