--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v2.view_flow()"
+    "collection_v2.view_lineage()"
    ]
   }
  ],
