--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
