--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
