--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LaminDB allows tracking data flow on the entire project level.\n",
+    "LaminDB allows tracking data lineage on the entire project level.\n",
     "\n",
     "Here, we walk through exemplified app uploads, pipelines & notebooks following [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
     "\n",
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "output_file = ln.Artifact.filter(description=\"perturbseq counts\").one()\n",
-    "output_file.view_flow()"
+    "output_file.view_lineage()"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
