🎨 Not set organism globally

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -56,7 +56,6 @@
     "import lnschema_bionty as lb\n",
     "from lamin_utils import logger\n",
     "\n",
-    "lb.settings.organism = \"human\"  # globally set organism\n",
     "lb.settings.auto_save_parents = False"
    ]
   },
@@ -99,7 +98,13 @@
     "    adata = ln.dev.datasets.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
-    "    genes = lb.Gene.from_values(adata.var_names, lb.Gene.ensembl_gene_id)\n",
+    "    genes = lb.Gene.from_values(\n",
+    "        adata.var_names,\n",
+    "        lb.Gene.ensembl_gene_id,\n",
+    "        organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "            \"human\"\n",
+    "        ),\n",
+    "    )\n",
     "    ln.save(genes)\n",
     "    obs_features = ln.Feature.from_df(adata.obs)\n",
     "    ln.save(obs_features)\n",
@@ -114,7 +119,12 @@
     "\n",
     "    # register artifact and annotate with features & labels\n",
     "    artifact = ln.Artifact.from_anndata(\n",
-    "        adata, description=\"anndata with obs\", field=lb.Gene.ensembl_gene_id\n",
+    "        adata,\n",
+    "        description=\"anndata with obs\",\n",
+    "        field=lb.Gene.ensembl_gene_id,\n",
+    "        organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "            \"human\"\n",
+    "        ),\n",
     "    )\n",
     "    artifact.save()\n",
     "    features = ln.Feature.lookup()\n",
@@ -260,6 +270,9 @@
     "    adata_subset.to_memory(),\n",
     "    description=\"anndata with obs subset\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
+    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        \"human\"\n",
+    "    ),\n",
     ")"
    ]
   },
