--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -48,8 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.settings.set_figure_params(dpi=80, facecolor=\"white\")\n",
-    "lb.settings.organism = \"human\""
+    "sc.settings.set_figure_params(dpi=80, facecolor=\"white\")"
    ]
   },
   {
@@ -311,7 +310,12 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"seurat_ifnb_activated_Bcells\", field=lb.Gene.symbol\n",
+    "    adata,\n",
+    "    description=\"seurat_ifnb_activated_Bcells\",\n",
+    "    field=lb.Gene.symbol,\n",
+    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        \"human\"\n",
+    "    ),\n",
     ")\n",
     "artifact.save()"
    ]
@@ -382,12 +386,18 @@
     "    lb.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
     "    type=\"category\",\n",
+    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        \"human\"\n",
+    "    ),\n",
     ")\n",
     "degs_dw_featureset = ln.FeatureSet.from_values(\n",
     "    degs_dw.names,\n",
     "    lb.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
     "    type=\"category\",\n",
+    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        \"human\"\n",
+    "    ),\n",
     ")\n",
     "\n",
     "# Link feature sets to artifact\n",
