--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -259,16 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a Artifact object from this AnnData. Because this will validate the gene IDs and these are only defined given a organism, we have to set a organism context:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.settings.organism = \"saccharomyces cerevisiae\""
+    "Let's create a Artifact object from this AnnData."
    ]
   },
   {
@@ -288,7 +279,11 @@
    },
    "outputs": [],
    "source": [
-    "genes = lb.Gene.from_values(adata.var.index, lb.Gene.stable_id)"
+    "genes = lb.Gene.from_values(\n",
+    "    adata.var.index,\n",
+    "    lb.Gene.stable_id,\n",
+    "    organism=\"saccharomyces cerevisiae\",  # or set globally with lb.settings.organism\n",
+    ")"
    ]
   },
   {
@@ -326,7 +321,10 @@
    "outputs": [],
    "source": [
     "curated_file = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Curated bulk RNA counts\", field=lb.Gene.stable_id\n",
+    "    adata,\n",
+    "    description=\"Curated bulk RNA counts\",\n",
+    "    field=lb.Gene.stable_id,\n",
+    "    organism=\"saccharomyces cerevisiae\",\n",
     ")"
    ]
   },
