--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -76,9 +76,7 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import readfcs\n",
-    "\n",
-    "lb.settings.organism = \"human\""
+    "import readfcs"
    ]
   },
   {
@@ -255,7 +253,12 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "validated = lb.CellMarker.validate(\n",
+    "    adata.var.index,\n",
+    "    organism=(  # optionally, set global organism via lb.settings.organism = \"human\"\n",
+    "        \"human\"\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -275,8 +278,8 @@
    },
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index, organism=\"human\")\n",
+    "validated = lb.CellMarker.validate(adata.var.index, organism=\"human\")"
    ]
   },
   {
@@ -311,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "validated = lb.CellMarker.validate(adata.var.index, organism=\"human\")\n",
     "assert all(validated)  # all markers are validated"
    ]
   },
@@ -430,7 +433,7 @@
    "source": [
     "features = ln.Feature.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()"
+    "organisms = lb.Organism.lookup()"
    ]
   },
   {
@@ -442,7 +445,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Alpert19\", field=lb.CellMarker.name\n",
+    "    adata, description=\"Alpert19\", field=lb.CellMarker.name, organism=organisms.human\n",
     ")"
    ]
   },
@@ -622,7 +625,7 @@
    "outputs": [],
    "source": [
     "collection.labels.add(experimental_factors.cytof, features.assay)\n",
-    "collection.labels.add(organism.human, features.organism)"
+    "collection.labels.add(organisms.human, features.organism)"
    ]
   },
   {
