--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -23,9 +23,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
-    "\n",
-    "lb.settings.organism = \"human\""
+    "import lnschema_bionty as lb"
    ]
   },
   {
