--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -58,9 +58,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import matplotlib.pyplot as plt\n",
-    "import scanpy as sc\n",
-    "\n",
-    "lb.settings.organism = \"human\""
+    "import scanpy as sc"
    ]
   },
   {
@@ -153,6 +151,7 @@
     "    adata,\n",
     "    description=\"Suo22 Visium10X image F121_LP1_4LIV\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
+    "    organism=\"human\",\n",
     ")\n",
     "file_ad.save()"
    ]
