--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.filter().df()"
+    "lb.ExperimentalFactor.df()"
    ]
   },
   {
