--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Collection.filter().df()"
+    "ln.Collection.df()"
    ]
   },
   {
