--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -166,7 +166,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt = lb.CellType.bionty()\n",
     "cell_type_bt.search(\"CD8 positive T cell\").head(5)"
    ]
   },
@@ -290,7 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
