--- a/docs/developmental_stage.ipynb
+++ b/docs/developmental_stage.ipynb
@@ -201,7 +201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt = lb.DevelopmentalStage.bionty()\n",
     "developmental_stage_bt.search(\"organogenesis\").head(3)"
    ]
   },
@@ -323,7 +322,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
