--- a/docs/disease.ipynb
+++ b/docs/disease.ipynb
@@ -194,7 +194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_bt = lb.Disease.bionty()\n",
     "disease_bt.search(\"parkinsons disease\").head(3)"
    ]
   },
@@ -351,7 +350,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
