--- a/docs/ethnicity.ipynb
+++ b/docs/ethnicity.ipynb
@@ -200,7 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt = lb.Ethnicity.bionty()\n",
     "ethnicity_bt.search(\"American\").head(3)"
    ]
   },
@@ -341,7 +340,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
