--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -193,7 +193,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factor_bt = lb.ExperimentalFactor.bionty()\n",
     "experimental_factor_bt.search(\"single-cell rna seq\").head(3)"
    ]
   },
@@ -336,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
