--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -76,7 +76,9 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import readfcs"
+    "import readfcs\n",
+    "\n",
+    "lb.settings.organism = \"human\"  # globally set organism to human"
    ]
   },
   {
@@ -253,12 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(\n",
-    "    adata.var.index,\n",
-    "    organism=(  # optionally, set global organism via lb.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
-    ")"
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -278,8 +275,8 @@
    },
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index, organism=\"human\")\n",
-    "validated = lb.CellMarker.validate(adata.var.index, organism=\"human\")"
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -314,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index, organism=\"human\")\n",
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
     "assert all(validated)  # all markers are validated"
    ]
   },
@@ -445,7 +442,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Alpert19\", field=lb.CellMarker.name, organism=organisms.human\n",
+    "    adata, description=\"Alpert19\", field=lb.CellMarker.name\n",
     ")"
    ]
   },
