--- a/docs/pathway.ipynb
+++ b/docs/pathway.ipynb
@@ -194,7 +194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bt = lb.Pathway.bionty()\n",
     "pathway_bt.search(\"acetyl coa assimilation\").head(3)"
    ]
   },
@@ -336,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
