--- a/docs/tissue.ipynb
+++ b/docs/tissue.ipynb
@@ -200,7 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt = lb.Tissue.bionty()\n",
     "tissue_bt.search(\"alveolus lung\").head(3)"
    ]
   },
@@ -354,7 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
