--- a/docs/cell_line.ipynb
+++ b/docs/cell_line.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup.CLO: 0000000"
+    "lookup.clo_0000469"
    ]
   },
   {
@@ -193,7 +193,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_line_bt = lb.CellLine.bionty()\n",
     "cell_line_bt.search(\"hek293\").head(1)"
    ]
   },
@@ -315,7 +314,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
@@ -352,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
