--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd"
    ]
@@ -64,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.bionty()\n",
+    "cell_marker_bt = lb.CellMarker.bionty(organism=\"human\")\n",
     "cell_marker_bt"
    ]
   },
@@ -168,7 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_marker_bt = lb.CellMarker.bionty()\n",
     "cell_marker_bt.search(\"CD4\").head(5)"
    ]
   },
@@ -397,7 +397,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "cell_marker_bt = lb.CellType(bionty_source=bionty_source)\n",
+    "cell_marker_bt = lb.CellType(bionty_source=bionty_source, organism=\"human\")\n",
     "cell_marker_bt"
    ]
   },
@@ -411,7 +411,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
