--- a/docs/organism.ipynb
+++ b/docs/organism.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup.human"
+    "lookup.giant_panda"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "lookup_dict = lookup.dict()\n",
-    "lookup_dict[\"human\"]"
+    "lookup_dict[\"giant panda\"]"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup.homo_sapiens"
+    "lookup.ailuropoda_melanoleuca"
    ]
   },
   {
@@ -194,8 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism_bt = lb.Organism.bionty()\n",
-    "organism_bt.search(\"human\").head(1)"
+    "organism_bt.search(\"rabbit\").head(1)"
    ]
   },
   {
@@ -316,7 +315,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
@@ -353,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
