--- a/docs/phenotype.ipynb
+++ b/docs/phenotype.ipynb
@@ -196,7 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt = lb.Phenotype.bionty()\n",
     "phenotype_bt.search(\"dysplasia\").head(3)"
    ]
   },
@@ -336,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
