--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -397,7 +397,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "cell_marker_bt = lb.CellType(bionty_source=bionty_source, organism=\"human\")\n",
+    "cell_marker_bt = lb.CellType(bionty_source=bionty_source)\n",
     "cell_marker_bt"
    ]
   },
